--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Install Pnpm
         run: "npm install -g pnpm"
+      - name: Install Packages
+        run: "pnpm install"
       - name: Build
         run: "pnpm build"
       - name: Setup Pages
