--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Pnpm
         run: "npm install -g pnpm"
       - name: Install Packages
-        run: "pnpm install"
+        run: "pnpm install --no-frozen-lockfile"
       - name: Build
         run: "pnpm build"
       - name: Setup Pages
